<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/orange_title"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            style="@style/title_style"
            android:text="@string/text_connexia" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id"
        android:id="@+id/label_id"
        android:layout_marginLeft="143dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="143dp"
        android:layout_below="@+id/linearLayout"
        style="@style/text_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pwd"
        android:id="@+id/label_pwd"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/label_id"
        android:layout_alignLeft="@+id/label_id"
        style="@style/text_style"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/id_pwd"
        android:layout_alignTop="@+id/label_pwd"
        android:layout_toRightOf="@+id/label_pwd"
        android:layout_toEndOf="@+id/label_pwd"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_login"
        android:layout_alignTop="@+id/label_id"
        android:layout_alignLeft="@+id/id_pwd"
        android:layout_alignStart="@+id/id_pwd" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_active_session"
        android:id="@+id/id_active_session"
        android:layout_below="@+id/id_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:checked="false"
        android:textSize="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_cn"
        android:id="@+id/id_btn_cn"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/id_active_session"
        android:layout_alignLeft="@+id/id_pwd"/>


</RelativeLayout>
