<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp">


    <TextView
        android:id="@+id/textview_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_search" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_search"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="45dp"
        android:text="@string/text_ok" />

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_search"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/btn_ok"
        android:layout_alignTop="@+id/btn_ok"
        android:text="@string/text_dismiss" />

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoComplete_add_collab"
        android:layout_above="@+id/btn_ok"
        android:layout_toRightOf="@+id/textview_search"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"/>

</RelativeLayout>